--- a/access.html
+++ b/access.html
@@ -41,7 +41,7 @@
 • Expand outreach and partnerships with P-12 schools, community colleges, non-profits, and business and industry to increase educational opportunities that serve the needs of both students and the community.<br>
 • Increase the number of first-generation, post-traditional, international, and underrepresented students at NKU, particularly in fields where their underrepresentation is most significant.<br>
 • Design a welcoming and desirable NKU experience to create a sense of belonging for all students.</h4>
-		<p>New opporunities in the RA role always spurs interest and gives NKU an advantage over other school. The online plateform version of the Norse Life Community, I believe, is something few schools have and shows just how innovative NKU can be. Furthering this idea through dynamic programming and one on one interactions will give NKU the cutting edge it needs.</p>
+		<p>New opportunities in the RA role always spurs interest and gives NKU an advantage over other school. The online platform version of the Norse Life Community, I believe, is something few schools have and shows just how innovative NKU can be. Furthering this idea through dynamic programming and one on one interactions will give NKU the cutting edge it needs.</p>
 
 	</article>
 	
