--- a/belonging.html
+++ b/belonging.html
@@ -37,7 +37,7 @@
 
 		<h3>"We will foster a community of belonging by embracing equity, diversity, and inclusiveness."</h3>
 	
-		<h4>This is vital to develop the Norse Life Community. Everyone's voice must be heard and encouraged to share what they have experienced with one another. I have allowed residents to influence my choice of programs, leading me to host the MarioKart Competition and Omellete Bar. Additionally, through diversity in belonging in a community, the community itself learns and develops in and of itself.</h4>
+		<h4>This is vital to develop the Norse Life Community. Everyone's voice must be heard and encouraged to share what they have experienced with one another. I have allowed residents to influence my choice of programs, leading me to host the MarioKart Competition and Omelete Bar. Additionally, through diversity in belonging in a community, the community itself learns and develops in and of itself.</h4>
     <img src="assests/b054ca8359f1a0ca78dada2d2b2adef1.jpg" width="564" height="958" alt=""/> </article>
 	
 	
