--- a/candc.html
+++ b/candc.html
@@ -42,7 +42,7 @@
 • Strengthen engagement among alumni, business, and other external organizations with NKU students, faculty, and staff.<br>
 • Improve post-graduation outcomes to enhance graduates’ economic and social mobility."</h4>
 		<p> Through my work with the Design Guild, I strive to open students to need experiences that will help them build their foundation for their careers. I focus on exposing them to their community and develop a sense of what the industry is like, especially in the hub of Cincinnati. Often, companies in the area reach out to us, allowing us to work on a project with them or simply help us with ours.
-		<br> For Housing, I believe our work with LLCs and Greek Life has opened these opporunities to our residents as well as allowing them to get involved on other organizations on campus. Through RA programs we can develop this value forward and encourage more residents to get involed in such vital activities.</p>
+		<br>For Housing, I believe our work with LLCs and Greek Life has opened these opportunities to our residents as well as allowing them to get involved on other organizations on campus. Through RA programs we can develop this value forward and encourage more residents to get involved in such vital activities.</p>
 
 	</article>
 	
