--- a/collegiality.html
+++ b/collegiality.html
@@ -37,7 +37,7 @@
 
 		<h3>"We will maintain a climate of collegiality built on respect and characterized by open communication and shared responsibility."</h3>
 	
-		<h4>As a community, we all are responsible to care for our living space and one another. Accounablity through communication develops our individual responsiblity as well as our compassion for our community as a whole. By working together and creating an environment of trust and openness, the Norse Life Community can ensure each resident is living in a health and comfortable community.</h4>
+		<h4>As a community, we all are responsible to care for our living space and one another. Accountability through communication develops our individual responsibility as well as our compassion for our community as a whole. By working together and creating an environment of trust and openness, the Norse Life Community can ensure each resident is living in a health and comfortable community.</h4>
 
 	</article>
 	
