--- a/development.html
+++ b/development.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<h1>Deveopment</h1>
+		<h1>Development</h1>
 		<h2>3-5 take aways</h2>
 	</header>
 	<nav> 
@@ -34,11 +34,11 @@
 	<article>
 		<h3>Learning Moments</h3>
 		<h4>1. Some residents prefer alone time</h4>
-		<p>At first, I thought a majority of my residents would be open and excited to interact and parcipate in programs. I knew some would rather keep to themselves or need some encouragement to join the group. However, I was no prepared for only getting parcipation from one to two residents regularly. Over time, I found out that some of my residents just did not know about the programs because they did not walk around the areas I hung posters or they did not read their messages. Others had been aware, they were just busy or not motivated at the time to join. As I have continued as an RA, I have become more aware of telltale signs of residents wanting alone time versus needing a little encouragement.</p>
-		<h4>2. Team work isn't always dream-work</h4>
-		<p>Just as residents may need a push to get out of their comfort zone, so do other teammates when working as a group. As I have worked on the PR Committee in East Village and we as a staff have worked to organized building wides. In these events, I felt my strengths in taking on administative roles as well as encouragment and check ins. The events were always on my mind so I constantly thinking of new ways to improve our reach and the event itself. </p>
+		<p>At first, I thought a majority of my residents would be open and excited to interact and participate in programs. I knew some would rather keep to themselves or need some encouragement to join the group. However, I was no prepared for only getting participation from one to two residents regularly. Over time, I found out that some of my residents just did not know about the programs because they did not walk around the areas where posters were hung, or they did not read their messages. Others had been aware; they were just busy or not motivated at the time to join. As I have continued as an RA, I have become more aware of telltale signs of residents wanting alone time versus needing a little encouragement.</p>
+		<h4>2. Teamwork isn't always dream-work</h4>
+		<p>Just as residents may need a push to get out of their comfort zone, so do other teammates when working as a group. As I have worked on the PR Committee in East Village and we as a staff have worked to organized building wide events. In these events, I felt my strengths in taking on administrative roles as well as encouragement and check ins. The events were always on my mind so I constantly thinking of new ways to improve our reach and the event itself. </p>
 		<h4>3. Housing is doing everything they can to develop Norse Life Community </h4>
-		<p>As we introduced the mobile version of the Norse Life Community on Plunk, I have seen a growth of interest over residential life. Even in this tough time in Housing, with the closing of part of Woodcrest and dealing with teh virus, I have always appreciated our staffs positivity. With the residents always in mind, I feel Housing does its best to deal with each situation thrown their way. NKU is a community and it is the residents and leaders within it that makes it the proud and caring body of people that is the Norse Life Community.</p>
+		<p>As we introduced the mobile version of the Norse Life Community on Plunk, I have seen a growth of interest over residential life. Even in this tough time in Housing, with the closing of part of Woodcrest and dealing with the virus, I have always appreciated our staffs’ positivity. With the residents always in mind, I feel Housing does its best to deal with each situation thrown their way. NKU is a community and it is the residents and leaders within it that makes it the proud and caring body of people that is the Norse Life Community.</p>
 		
 		<h3>Areas to Improve</h3>
 		<h4>1. Interacting with Residents</h4>
@@ -46,8 +46,9 @@
 		<h4>2. Planning Programs</h4>
 		<p>Last semester I issued a poll online to ask residents what types of programs they would like to see. I would like to do this again as well as plan them ahead so I can promote them longer and in different ways.</p>
 		<h4>3. Encouraging Co-workers</h4>
-		<p>Snaps at the end of meeting is always meaningful but I think engaging one on one with co-workers shows how important someone is to a team. I also like to send letters or small gifts to show my graditude. Next semester, I want to develop team morale by doing little gifts of thankfulness to my co-workers.</p>
+		<p>Snaps at the end of meeting is always meaningful but I think engaging one on one with co-workers shows how important someone is to a team. I also like to send letters or small gifts to show my gratitude. Next semester, I want to develop team morale by doing little gifts of thankfulness to my co-workers.</p>
 	</article>
+
 	
 	
 	<footer>
