--- a/resadreturninterest.html
+++ b/resadreturninterest.html
@@ -34,7 +34,7 @@
 <h3> <br><img src="assests/IMG_3473.JPG" width="50" alt=""/>
 	<br><br><br><br>To inspire a community</h3> 
 
-		<p>My favorite moments as a RA come from interacting with residents and getting to know more about them. Earlier in January, I spent an afternoon cooking crepes with my resident Emily. We are both from Louisville so we ended up discussing the best places to eat in Louisville for over a hour! She told me about places I had never heard of. We started making a list and whenever summer comes around, we plan on visiting them together!
+		<p>My favorite moments as a RA come from interacting with residents and getting to know more about them. Earlier in January, I spent an afternoon cooking crepes with my resident Emily. We are both from Louisville, so we ended up discussing the best places to eat in Louisville for over an hour! She told me about places I had never heard of. We started making a list and whenever summer comes around, we plan on visiting them together!
 		
 		<br> </p>
 		
@@ -42,7 +42,7 @@
 	
 <h3>To be challenged</h3>
 
-		<h4>"Although it was a short time, it was my luck that I got you as RA. To be honest, I do not have much connection with the RA on the floor I am living right now. I think you are doing a great job as an RA because I know you helped me with my room change requet and also other things. I greatly appreciate your help. I think you are working greatly as an RA." <br>- Rojan</h4>
+		<h4>"Although it was a short time, it was my luck that I got you as RA. To be honest, I do not have much connection with the RA on the floor I am living right now. I think you are doing a great job as an RA because I know you helped me with my room change request and also other things. I greatly appreciate your help. I think you are working greatly as an RA." <br>- Rojan</h4>
 <img src="assests/My Post Copy-2.PNG" width="50" alt=""/>  
 		<img src="assests/IMG_3216.JPG" width="50" alt=""/>
 	</div>
